WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164959
Fix missing exception checks in JSC inspector files.
https://bugs.webkit.org/show_bug.cgi?id=164959
Summary
Fix missing exception checks in JSC inspector files.
Mark Lam
Reported
2016-11-18 14:53:38 PST
Patch coming.
Attachments
proposed patch.
(8.19 KB, patch)
2016-11-18 14:56 PST
,
Mark Lam
no flags
Details
Formatted Diff
Diff
revised to have returns immediately following scope.release()s.
(8.19 KB, patch)
2016-11-18 15:16 PST
,
Mark Lam
saam
: review+
Details
Formatted Diff
Diff
patch for landing.
(8.62 KB, patch)
2016-11-18 16:38 PST
,
Mark Lam
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2016-11-18 14:56:09 PST
Created
attachment 295197
[details]
proposed patch.
Mark Lam
Comment 2
2016-11-18 15:16:26 PST
Created
attachment 295200
[details]
revised to have returns immediately following scope.release()s.
Mark Lam
Comment 3
2016-11-18 16:21:04 PST
Comment on
attachment 295200
[details]
revised to have returns immediately following scope.release()s. View in context:
https://bugs.webkit.org/attachment.cgi?id=295200&action=review
> Source/JavaScriptCore/inspector/JSInjectedScriptHost.cpp:274 > + scope.release(); > array->putDirectIndex(exec, index++, constructInternalProperty(exec, ASCIILiteral("status"), jsNontrivialString(exec, ASCIILiteral("pending")))); > break;
Thanks for the review. I just realized that I uploaded the wrong version of the patch. The updated one should return shortly after the call to scope.release(). The change is minor. I'll upload the modified patch for landing.
Mark Lam
Comment 4
2016-11-18 16:38:40 PST
Created
attachment 295219
[details]
patch for landing.
WebKit Commit Bot
Comment 5
2016-11-19 00:03:56 PST
Comment on
attachment 295219
[details]
patch for landing. Clearing flags on attachment: 295219 Committed
r208923
: <
http://trac.webkit.org/changeset/208923
>
WebKit Commit Bot
Comment 6
2016-11-19 00:04:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug