Fix missing exception checks in JSC inspector files. https://bugs.webkit.org/show_bug.cgi?id=164959

Reviewed by Saam Barati.

* inspector/JSInjectedScriptHost.cpp:
(Inspector::JSInjectedScriptHost::getInternalProperties):
(Inspector::JSInjectedScriptHost::weakMapEntries):
(Inspector::JSInjectedScriptHost::weakSetEntries):
(Inspector::JSInjectedScriptHost::iteratorEntries):
* inspector/JSJavaScriptCallFrame.cpp:
(Inspector::JSJavaScriptCallFrame::scopeDescriptions):


Canonical link: https://commits.webkit.org/182632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208923 268f45cc-cd09-0410-ab3c-d52691b4dbfc