Source/JavaScriptCore/inspector/JSJavaScriptCallFrame.cpp
@@ -128,6 +128,9 @@ static JSValue valueForScopeLocation(ExecState* exec, const DebuggerLocation& lo
 
 JSValue JSJavaScriptCallFrame::scopeDescriptions(ExecState* exec)
 {
+    VM& vm = exec->vm();
+    auto throwScope = DECLARE_THROW_SCOPE(vm);
+
     DebuggerScope* scopeChain = impl().scopeChain();
     if (!scopeChain)
         return jsUndefined();
@@ -143,6 +146,7 @@ JSValue JSJavaScriptCallFrame::scopeDescriptions(ExecState* exec)
         description->putDirect(exec->vm(), Identifier::fromString(exec, "name"), jsString(exec, scope->name()));
         description->putDirect(exec->vm(), Identifier::fromString(exec, "location"), valueForScopeLocation(exec, scope->location()));
         array->putDirectIndex(exec, index++, description);
+        RETURN_IF_EXCEPTION(throwScope, JSValue());
     }
 
     return array;
